Table StudentInfo {
  student_info_id INTEGER [primary key]
  student_id INTEGER [not null, ref: - Student.student_id]
  social_security_nr VARCHAR(13)
  email VARCHAR(100)

 indexes {
  (student_id, social_security_nr, email) [unique]
  }
}

Table Student {
  student_id INTEGER [primary key]
  class_id INTEGER [not null, ref: > Class.class_id]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
}

Table Class {
  class_id INTEGER [primary key]
  school_id INTEGER [not null, ref: > School.school_id]
  program_id INTEGER [not null, ref: > Program.program_id]
  name VARCHAR(50) [not null]
  start_year INTEGER [not null]
  cohort SMALLINT [not null]
}

Table School {
  school_id INTEGER [primary key]
  name VARCHAR(50) [not null]
  address VARCHAR(50) [not null]
}

Table ProgramSchool {
  program_school_id INTEGER [primary key]
  school_id INTEGER [not null, ref: > School.school_id]
  program_id INTEGER [not null, ref: > Program.program_id]
 
 indexes {
  (program_id, school_id) [unique]
  }

}

Table Program {
  program_id INTEGER [primary key]
  edulead_id INTEGER [not null, ref: > EduLead.edulead_id]
  name VARCHAR(50) [not null]
  code VARCHAR(10) [not null]

  indexes {
  (code) [unique]
  }
}

Table CourseProgram {
  course_program_id INTEGER [primary key]
  course_id INTEGER [not null, ref: > Course.course_id]
  program_id INTEGER [not null, ref: > Program.program_id]

  indexes {
  (program_id, course_id) [unique]
  }
}

Table Course {
  course_id INTEGER [primary key]
  teacher_id INTEGER [not null, ref: > Teacher.teacher_id]
  name VARCHAR(50) [not null]
  code VARCHAR(10) [not null]
  points INTEGER [not null]
  description VARCHAR(500) [not null]

  indexes {
  (code) [unique]
  }
}

Table CourseStudent {
  course_student_id INTEGER [primary key]
  student_id INTEGER [not null, ref: > Student.student_id]
  course_id INTEGER [not null, ref: > Course.course_id]
  reg_date DATE [not null]

  indexes {
  (student_id, course_id) [unique]
  }
}

Table EduLead {
  edulead_id INTEGER [primary key]
  teacher_id INTEGER [not null, ref: - Teacher.teacher_id]
  start_date DATE [not null]

  indexes {
  (teacher_id) [unique]
  }
}

Table Teacher {
  teacher_id INTEGER [primary key]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
  contract_type VARCHAR(50) [not null, note: "must be either 'consultant' or 'permanent_hire'" ]
  hire_date DATE [not null]

}

Table TeacherInfo {
  teacher_info_id INTEGER [primary key]
  teacher_id INTEGER [not null, ref: - Teacher.teacher_id]
  social_security_nr VARCHAR(13)
  email VARCHAR(100)

  indexes {
  (teacher_id, social_security_nr, email) [unique]
  }
}

Table Consultant {
  consultant_id INTEGER [primary key]
  teacher_id INTEGER [not null, ref: - Teacher.teacher_id]
  company_id INTEGER [not null, ref: > Company.company_id]
  hourly_rate FLOAT

  indexes {
  (teacher_id) [unique]
  }
}

Table PermanentHire {
  permanent_hire_id INTEGER [primary key]
  teacher_id INTEGER [not null, ref: - Teacher.teacher_id]
  monthly_salary FLOAT

  indexes {
  (teacher_id) [unique]
  }
}

Table Company {
  company_id INTEGER [primary key]
  name VARCHAR(50) [not null]
  org_nr VARCHAR(11) [not null]
  address VARCHAR(200) [not null]
  f_tax BOOLEAN

  indexes {
  (org_nr) [unique]
  }
}
